--- a/FoodStamps/app/src/main/res/layout/activity_maps.xml
+++ b/FoodStamps/app/src/main/res/layout/activity_maps.xml
@@ -1,16 +1,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
     <fragment
         android:id="@+id/mapView"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-    <EditText
-        android:layout_width="wrap_content"
+    <Spinner
+        android:id="@+id/healthOptions"
         android:layout_height="wrap_content"
-        android:hint="Search Store"
-        android:alpha=".5"
-        />
+        android:layout_width="fill_parent"
+        android:entries="@array/scale"
+        android:prompt="@string/health_option"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"/>
+
+
 </RelativeLayout>
