--- a/FoodStamps/app/src/main/res/layout/activity_maps.xml
+++ b/FoodStamps/app/src/main/res/layout/activity_maps.xml
@@ -17,7 +17,8 @@
         android:entries="@array/scale"
         android:prompt="@string/health_option"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="50dp"
+        android:alpha=".75"/>
 
 
 </RelativeLayout>
